Added new files and made several modifications
- Added new CSS and PHP files:
  - a.css
  - contact.php
  - detail.php
  - s.css
  - stylesheet.css
  - swiper.min.css
- Modified existing HTML, CSS, and PHP files:
  - club.html
  - css/stylesheet (1).css
  - index.php
  - league.php
  - match.php
  - member.php
- Deleted obsolete HTML files:
  - contact.html
  - detail.html
  - result.html
- Added new image files:
  - img/IMG_3729.JPG
  - img/IMG_3730.JPG
  - img/esp.logo.png
  - img/soccer.df.jpg
  - img/soccer.fw.jpg
  - img/soccer.gk.jpg
  - img/soccer.mf.jpg
- Added new JavaScript files:
  - js/common.js
  - js/lib/swiper-bundle.min.js
  - js/swiper-bundle.min.js
- Added new PHP files:
  - news.php
  - result.php
  - sent.php
  - slide.php

--- a/club.html
+++ b/club.html
@@ -8,34 +8,76 @@
   </head>
   <body>
     <header>
-        <div class="container">
-            <div class="header-left"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\index.html">FC.ESPERTO</a></div>
-            <div class="header-right">
-              <ul class="menu-lists">
-                <li class="menu-list"><a href="#">TEAM</a>
-                  <ul class="drop-lists">
-                    <li class="drop-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\club.html">クラブ概要</a></li>
-                    <li class="drop-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\member.html">メンバー</a></li>
-                  </ul>
-                </li>
-                <li class="menu-list"><a href="#">MATCHES</a>
-                  <ul class="drop-lists">
-                    <li class="drop-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\match.html">試合情報</a></li>
-                    <li class="drop-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\result.html">試合結果</a></li>
-                    <li class="drop-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\league.html">順位表</a></li>
-                  </ul>
-                </li>
-                <li class="menu-list"><a href="C:\Users\Bell\OneDrive\デスクトップ\ESPERTO\contact.html">CONTACT US</a></li>
-                <li class="menu-list"><a href="https://www.instagram.com/f.c__esperto?utm_source=ig_web_button_share_sheet&igsh=MmVlMjlkMTBhMg==" class="instagram"><span class="fa fa-instagram"></span></a></li>
-            </ul>
-          </div>
+      <div class="header-left">
+        <p><a href="index.php">FC.ESPERTO</a><p>
+      </div>
+
+      <div class="header-center">
+        <img class="logo" src="img/esp.logo.png">
+      </div>
+
+
+      <!-- メニューアイコン -->
+      <div class="menu-icon" id="menuIcon">&#9776;
+        <div class="sidenav" id="sidenav">
+          <a href="javascript:void(0)" class="closebtn" id="closeBtn">&times;</a>
+          <ul class="options-lists">
+            <li class="option-list"><a href="#">TEAM</a>
+              <ul class="under-lists">
+                <li class="under-list"><a href="club.html">クラブ概要</a></li>
+                <li class="under-list"><a href="member.php">メンバー</a></li>
+              </ul>
+            </li>
+            <li class="option-list"><a href="#">MATCHES</a>
+              <ul class="under-lists">
+                <li class="under-list"><a href="match.php">試合情報</a></li>
+                <li class="under-list"><a href="result.php">試合結果</a></li>
+                <li class="under-list"><a href="league.php">順位表</a></li>
+              </ul>
+            </li>
+            <li class="option-list"><a href="contact.php">CONTACT US</a></li>
+            <li class="option-list">
+              <a href="https://www.instagram.com/f.c__esperto?utm_source=ig_web_button_share_sheet&igsh=MmVlMjlkMTBhMg==" class="instagram">
+                <span class="fa fa-instagram"></span>
+              </a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <!-- <span class= "menu-icon fa fa-bars"></span> -->
+      <div class="header-right">
+        <ul class="menu-lists">
+          <li class="menu-list"><a href="#">TEAM</a>
+            <ul class="drop-lists">
+              <li class="drop-list"><a href="club.html">クラブ概要</a></li>
+              <li class="drop-list"><a href="member.php">メンバー</a></li>
+            </ul>
+          </li>
+          <li class="menu-list"><a href="#">MATCHES</a>
+            <ul class="drop-lists">
+              <li class="drop-list"><a href="match.php">試合情報</a></li>
+              <li class="drop-list"><a href="result.php">試合結果</a></li>
+              <li class="drop-list"><a href="league.php">順位表</a></li>
+            </ul>
+          </li>
+          <li class="menu-list"><a href="contact.php">CONTACT US</a></li>
+          <li class="menu-list">
+            <a href="https://www.instagram.com/f.c__esperto?utm_source=ig_web_button_share_sheet&igsh=MmVlMjlkMTBhMg==" class="instagram">
+              <span class="fa fa-instagram"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
     </header>
+    <div class="top-wrapper">
+      <div class="container">
+        <h1>TEAM</h1>
+      </div>
+  </div>
     <div class="team-wrapper">
         <div class="container">
           <div class="heading">
-            <h2>TEAM</h2>
-            <p>クラブ概要</p>
+            <h2>クラブ概要</h2>
           </div>
           <div class="contents">
             <p class="txt-content">FC.ESPERTOは、1999年に創設され現在に至るまでの20年を超えて京都フットボールリーグで活動する伝統あるチームです。<br>現在は２部リーグに所属しており、１部昇格を目標とし、幅広い世代のサッカー小僧が集い活動しています。</p>
@@ -51,7 +93,7 @@
                     </tr>
                     <tr class="">
                         <th>チーム名の由来</th>
-                        <td>スペイン語で「賢い」、困難な状況を切り抜けるといったニュアンスを持つ単語から引用。</td>
+                        <td>イタリア語で「玄人、熟練者」という意味で、その分野のエキスパートといったニュアンスを持つ単語から引用。</td>
                     </tr>
                     <tr class="">
                         <th>所属</th>
@@ -83,6 +125,33 @@
           </div>
         </div>
       </footer>
+
+      <!-- メニューアイコン -->
+    <script src="script.js"></script>
+
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+    var menuIcon = document.getElementById("menuIcon");
+    var sidenav = document.getElementById("sidenav");
+    var closeBtn = document.getElementById("closeBtn");
+
+    menuIcon.addEventListener("click", function() {
+        sidenav.style.width = "250px";
+    });
+
+    closeBtn.addEventListener("click", function() {
+        sidenav.style.width = "0";
+    });
+
+    // Close the sidenav if the user clicks outside of it
+    window.addEventListener("click", function(event) {
+        if (!event.target.matches('#menuIcon') && !event.target.closest('.sidenav')) {
+            sidenav.style.width = "0";
+        }
+    });
+});
+
+    </script>
   
     </body>
-  </html>
+</html>
