--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <body>
     <h1>Welcome to My GitHub Page</h1>
     <p>This is a simple page hosted with GitHub Pages.</p>
+
+    repositoryname/
+    ├── index.html
+    ├── styles.css (任意)
+    ├── script.js (任意)
+    └── その他のファイル
+    
+
+
 </body>
 </html>
