Update website content and styles
- Added new PHP files: a.php, b.php, sample.php
- Updated various PHP files: club.html, contact.php, detail.php, etc.
- Added and modified CSS files for responsive design
- Updated images and removed unused images

--- a/club.html
+++ b/club.html
@@ -20,7 +20,7 @@
 
 
       <!-- メニューアイコン -->
-      <div class="menu-icon" id="menuIcon">&#9776;
+      <div class="menu-icon" id="menuIcon">&#9776;</div>
         <div class="sidenav" id="sidenav">
           <a href="javascript:void(0)" class="closebtn" id="closeBtn">&times;</a>
           <ul class="options-lists">
@@ -45,8 +45,6 @@
             </li>
           </ul>
         </div>
-      </div>
-      <!-- <span class= "menu-icon fa fa-bars"></span> -->
       <div class="header-right">
         <ul class="menu-lists">
           <li class="menu-list"><a href="#">TEAM</a>
@@ -132,28 +130,27 @@
     <script src="script.js"></script>
 
     <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    var menuIcon = document.getElementById("menuIcon");
-    var sidenav = document.getElementById("sidenav");
-    var closeBtn = document.getElementById("closeBtn");
+      document.addEventListener("DOMContentLoaded", function() {
+          var menuIcon = document.getElementById("menuIcon");
+          var sidenav = document.getElementById("sidenav");
+          var closeBtn = document.getElementById("closeBtn");
 
-    menuIcon.addEventListener("click", function() {
-        sidenav.style.width = "250px";
-    });
+          menuIcon.addEventListener("click", function() {
+              sidenav.style.width = "250px";
+          });
 
-    closeBtn.addEventListener("click", function() {
-        sidenav.style.width = "0";
-    });
+          closeBtn.addEventListener("click", function() {
+              sidenav.style.width = "0";
+          });
 
-    // Close the sidenav if the user clicks outside of it
-    window.addEventListener("click", function(event) {
-        if (!event.target.matches('#menuIcon') && !event.target.closest('.sidenav')) {
-            sidenav.style.width = "0";
-        }
-    });
-});
-
-    </script>
+          // Close the sidenav if the user clicks outside of it
+          window.addEventListener("click", function(event) {
+              if (!event.target.matches('#menuIcon') && !event.target.closest('.sidenav')) {
+                  sidenav.style.width = "0";
+              }
+          });
+      });
+  </script>
   
     </body>
 </html>
